--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button {
     margin: 5px;
     cursor: pointer;
     display: inline-block; 
-    padding: 0 10px; /
+    padding: 0 10px; 
 }
 
 
@@ -91,4 +91,10 @@ footer {
     padding: 10px;
     border-radius: 6px;
     background-color: #6a597251;
+}
+
+img {
+    max-width: 50%;
+    height: auto;
+    border-radius: 10px;
 }
